# python-tooling-example

./: .pre-commit-config.yaml  DEMO_SCRIPT.md  README.md  UV_COMMANDS.md  main.py  pyproject.toml
src/python_tooling_example/: __init__.py  bad_examples.py  main.py  utils.py
