[project]
name = "python-tooling-example"
version = "0.1.0"
description = "Demo repository for modern Python tooling tech talk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling configuration for src-layout
[tool.hatch.build.targets.wheel]
packages = ["src/python_tooling_example"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pyright (type checker) configuration
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
stubPath = "src/stubs"
venvPath = "."
venv = ".venv"

# Type checking settings
typeCheckingMode = "strict"  # "off", "basic", "standard", or "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

# Enable specific checks
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true

# pytest configuration (for future use)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
